-----------------------------------------
Release Notes for Trilinos Package Kokkos
-----------------------------------------

Trilinos 11.0
------------------------------
* Non-backwards compatible change: row pointers for CRS objects are not longer size_t; instead, they are the same Ordinal type as the columns indices


Trilinos 10.12
------------------------------

* Major (backwards-compatible, internal) refactor of local sparse operators, esp. DefaultSparseOps
* Using generic sparse kernels only on host node; CUDA nodes use CUSPARSE. Adaptors for Cusp are work-in-progress.
* Added first-touch-allocation support for sparse matrices; should improve performance on NUMA nodes.
* Still lots of work in progress on sparse matrix support, expected for Trilinos 11.0


Trilinos 10.10
------------------------------

* Added OpenMP node (written by Radu Popescu)

Trilinos 10.8:
--------------

* New multidimensional array sub-package in kokkos/array subdirectory.
  The MDArrayView<Type,Device>, MultiVectorView<Type,Device>,
  and ValueView<Type,Device> template classes manage allocated
  memory on the 'Device' and perform compile-time selection of a
  device-optimal mapping of array's multi-index space to data members.
  Includes unit tests, performance tests, and example mini-applications.



Trilinos 10.6.4:
----------------

* Fixed some bugs in the build system
* Updates to support CUDA 4.0 and built-in Thrust

Trilinos 10.6.1:
----------------

* Fixed some ansi/pednatic build warnings in the node tests.
* Added sync() method to all nodes, modified node timings test to use it, documented it in Kokkos Node API module. Added cudaSyncThreads() to native CUDA/Thrust timings. Broke node timings into multiple exectuables, to keep TBB and TPI from stepping on each other.
* Added native threading examples to Kokkos Node API tests for timing comparisons, kokkos/NodeAPI/test.
* Added ifdefed TPI_Block() and TPI_Unblock() around GEMM calls in Kokkos::DefaultArithmetic<TPINode>