@@ -1,11 +1,9 @@
-Ready for development:
-* put num columns in CRS interface 
-
 NodeAPI:
 * modify getDefaultNode() to take a parameter list
   this list should be search for a sublist matching the name of the node; if found, sublist goes to the new node. otherwise, whole list goes to the new node.
 * add node method to query data type support: bool Node::has_support<T>()
 
 LinAlg:
+* document all sparse kernel TPL capabilities
 * add CUSP sparse mat-vec implementations for CUDA nodes
 * add CUBLAS GEMM for CUDA nodes
